Configure full-stack deployment for Railway

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "backend/server.js",
   "scripts": {
     "start": "cd backend && npm start",
-    "build": "cd backend && npm install",
+    "build": "cd backend && npm install && cd ../frontend && npm install && npm run build",
     "install-backend": "cd backend && npm install",
     "install-frontend": "cd frontend && npm install",
     "dev": "cd backend && npm run dev"
