--- a/frontend/netlify.toml
+++ b/frontend/netlify.toml
@@ -9,4 +9,4 @@
 
 [build.environment]
   NODE_VERSION = "18"
-  VITE_API_URL = "https://your-railway-url.up.railway.app/api"
+  VITE_API_URL = "http://linkedin-post-generator-production-6802.up.railway.app/api"
